k8s/reservation-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: reservation-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: reservation-service
  template:
    metadata:
      labels:
        app: reservation-service
    spec:
      containers:
        - name: reservation-service
          image: azizmeddeb/reservation-service:latest  
          ports:
            - containerPort: 5003
---

apiVersion: v1
kind: Service
metadata:
  name: reservation-service
spec:
  type: NodePort
  selector:
    app: reservation-service
  ports:
    - port: 5003
      targetPort: 5003
      protocol: TCP
      nodePort: 30102
