k8s/salle-service.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: salle-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: salle-service
  template:
    metadata:
      labels:
        app: salle-service
    spec:
      containers:
        - name: salle-service
          image: azizmeddeb/projet_devops-salle-service:latest  
          ports:
            - containerPort: 5002  
---

apiVersion: v1
kind: Service
metadata:
  name: salle-service
spec:
  type: NodePort
  selector:
    app: salle-service
  ports:
    - port: 5002
      targetPort: 5002
      protocol: TCP
      nodePort: 30100
